@@ -22,6 +22,7 @@ Version 1.0.1+svn:
    * revised multiplayer maps: Blitz, Clash, Charge, CastleHoppingIsle, 
      Hamlets, Hornshark Island
    * fixed gamelist diff bug
+ * Backport recall fix to allow access to recall list when short on gold.
 
 Version 1.0.1:
  * graphics
